[gd_scene load_steps=30 format=2]

[ext_resource path="res://Assets/Fonts/NES.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Sprites/botan.png" type="Texture" id=2]
[ext_resource path="res://Assets/BG/battleback1.png" type="Texture" id=3]
[ext_resource path="res://src/Battle.gd" type="Script" id=4]
[ext_resource path="res://src/Botan.tres" type="Resource" id=5]
[ext_resource path="res://Assets/Music/Funky-Gameplay_Looping.mp3" type="AudioStream" id=6]
[ext_resource path="res://Assets/Music/Decisions.mp3" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sound Effects/mixkit-samurai-sword-impact-2789.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sound Effects/mixkit-spellcaster-fairy-swoosh-1463.wav" type="AudioStream" id=9]
[ext_resource path="res://Assets/Sound Effects/mixkit-heavy-sword-smashes-metal-2795.wav" type="AudioStream" id=10]
[ext_resource path="res://Assets/Sound Effects/mixkit-impact-of-a-strong-punch-2155.mp3" type="AudioStream" id=11]
[ext_resource path="res://Assets/Sound Effects/PowerUp28.mp3" type="AudioStream" id=12]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.054902, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.537255 )

[sub_resource type="DynamicFontData" id=4]
antialiased = false
font_path = "res://Assets/Fonts/NESCyrillic.ttf"

[sub_resource type="DynamicFont" id=5]
size = 43
font_data = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFontData" id=9]
antialiased = false
font_path = "res://Assets/Fonts/Adventurer.ttf"

[sub_resource type="DynamicFont" id=10]
size = 40
font_data = SubResource( 9 )

[sub_resource type="Animation" id=11]
resource_name = "enemy_damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("BotanContainer/Botan:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "enemy_died"
tracks/0/type = "value"
tracks/0/path = NodePath("BotanContainer/Botan:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "fade_out"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=14]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 2 ), Vector2( 4, 7 ), Vector2( 10, 3 ), Vector2( 10, 5 ), Vector2( 4, 2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 24.3907, 4.99382 ), Vector2( 9.27167, 19.8378 ), Vector2( 61.6211, 3.72234 ), Vector2( 73.8706, 19.6143 ), Vector2( 41.3192, 18.0108 ), Vector2( 0, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[node name="Battle" type="Control"]
modulate = Color( 0.3, 0.3, 0.3, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
enemy = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyHealth" type="ProgressBar" parent="."]
margin_left = 648.0
margin_top = 108.0
margin_right = 1018.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 16 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 1000.0
step = 1.0
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EnemyHealth"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "HP: 25/50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotanContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -240.0
margin_top = 64.0
margin_right = 1701.0
margin_bottom = 2297.0
rect_scale = Vector2( 0.240033, 0.251291 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Botan" type="TextureRect" parent="BotanContainer"]
margin_right = 1941.0
margin_bottom = 2233.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="PlayerPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.33484
margin_top = -76.0
margin_right = -1.33484
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerPanel/PlayerData"]
margin_top = 22.0
margin_right = 502.0
margin_bottom = 54.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "???"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/PlayerData"]
margin_left = 506.0
margin_top = 23.0
margin_right = 1008.0
margin_bottom = 53.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 1000.0
step = 1.0
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerPanel/PlayerData/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "HP: 25/50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionsPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 76.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Actions" type="HBoxContainer" parent="ActionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -6.0
custom_constants/separation = 6
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="Button" parent="ActionsPanel/Actions"]
margin_right = 248.0
margin_bottom = 64.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "ATTACK"

[node name="Magic" type="Button" parent="ActionsPanel/Actions"]
margin_left = 254.0
margin_right = 503.0
margin_bottom = 64.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "MAGIC"

[node name="Defend" type="Button" parent="ActionsPanel/Actions"]
margin_left = 509.0
margin_right = 757.0
margin_bottom = 64.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "DEFEND"

[node name="Run" type="Button" parent="ActionsPanel/Actions"]
margin_left = 763.0
margin_right = 1012.0
margin_bottom = 64.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "RUN"

[node name="Textbox" type="Panel" parent="."]
visible = false
anchor_right = 1.0
margin_left = 16.0
margin_top = 484.066
margin_right = -16.0
margin_bottom = 586.066
custom_styles/panel = SubResource( 8 )

[node name="Label" type="Label" parent="Textbox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 10 )
text = "Botan appears!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ticker" type="Label" parent="Textbox"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -42.0
custom_fonts/font = SubResource( 10 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/enemy_damaged = SubResource( 11 )
anims/enemy_died = SubResource( 12 )
anims/fade_in = SubResource( 17 )
anims/fade_out = SubResource( 13 )
anims/mini_shake = SubResource( 14 )
anims/shake = SubResource( 15 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="TalkStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -8.0

[node name="BattleStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -8.0

[node name="MagicPanel" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.917647 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
custom_styles/panel = SubResource( 16 )

[node name="Spells" type="VBoxContainer" parent="MagicPanel"]
margin_right = 208.0
margin_bottom = 399.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heal" type="Button" parent="MagicPanel/Spells"]
margin_left = 5.0
margin_top = 5.0
margin_right = 213.0
margin_bottom = 45.0
rect_min_size = Vector2( 208, 40 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
enabled_focus_mode = 0
text = "HEAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SFXBotanBasicAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -8.0

[node name="SFXHeal" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="SFXStigmaAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -8.0

[node name="SFXPlayerBasicAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="SFXPlayerCriticalHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -8.0

[node name="SFXStigmaCharged" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[connection signal="pressed" from="ActionsPanel/Actions/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Magic" to="." method="_on_Magic_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Defend" to="." method="_on_Defend_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Run" to="." method="_on_Run_pressed"]
[connection signal="pressed" from="MagicPanel/Spells/Heal" to="." method="_on_Heal_pressed"]
